--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,47 +2,41 @@ name: Deploy to Production
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
+# PAT だけでなく Project Ref / DB パスワードもまとめて Job-level env に展開
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+      SUPABASE_PROJECT_REF: ${{ secrets.SUPABASE_PROJECT_REF }}
+      SUPABASE_DB_PASSWORD:  ${{ secrets.SUPABASE_DB_PASSWORD }}
+
     steps:
       # 1. コード取得
       - uses: actions/checkout@v3
 
-      # 2. Supabase CLI インストール
+      # 2. Supabase CLI インストール（最新版を明示）
       - uses: supabase/setup-cli@v1
         with:
-          version: latest
+          version: 1.140.0   # 1.136.3 以降なら OK
 
-      # 3. Supabase プロジェクトにリンク
+      # 3. Supabase プロジェクトに非対話リンク
       - name: Link to Supabase Project
         run: |
           supabase link \
-            --project-ref ${{ secrets.SUPABASE_PROJECT_REF }} \
+            --project-ref "$SUPABASE_PROJECT_REF" \
             --password    "$SUPABASE_DB_PASSWORD"
-        env:
-          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-          SUPABASE_DB_PASSWORD:  ${{ secrets.SUPABASE_DB_PASSWORD }}
 
       # 4. マイグレーション適用
       - name: Apply Migrations
-        run: |
-          supabase db push
-        env:
-          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-          SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
+        run: supabase db push
 
       # 5. Edge Functions デプロイ
       - name: Deploy Edge Functions
         run: supabase functions deploy
-        env:
-          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
 
-      # 6. 環境設定（必要なら）
-      #- name: Push Config
-      #  run: supabase config push
-      #  env:
-      #    SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+      # （任意）6. 環境設定をプッシュ
+      # - name: Push Config
+      #   run: supabase config push
