ci: minor fix to supabase Apply Migrations

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,5 +35,5 @@ jobs:
         run: supabase db push
 
       # 5. Edge Functions デプロイ
-      - name: Deploy Edge Functions
-        run: supabase functions deploy
+      # - name: Deploy Edge Functions
+      #   run: supabase functions deploy
