--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,4 +54,4 @@ jobs:
           vercel-org-id:      ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id:  ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory:  .
-          alias-domains:      https://pharma-crm-git-main-kosuke-fujimotos-projects.vercel.app
+          alias-domains:      pharma-crm-git-main-kosuke-fujimotos-projects.vercel.app
